--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "submodules/simd_helpers"]
 	path = submodules/simd_helpers
 	url = https://github.com/kmsmith137/simd_helpers
+[submodule "submodules/sp_hdf5"]
+	path = submodules/sp_hdf5
+	url = https://github.com/kmsmith137/sp_hdf5
