--- a/sp_hdf5/Dockerfile
+++ b/sp_hdf5/Dockerfile
@@ -1,11 +1,10 @@
 FROM chime-base
 
 WORKDIR /tmp
-RUN mkdir hdf5-src && wget 'ftp://support.hdfgroup.org/HDF5/current/src/hdf5*.tar.gz' && \
+RUN mkdir hdf5-src && wget 'https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.8/hdf5-1.8.19/src/hdf5-1.8.19.tar.gz' && \
     tar xzf hdf*.tar.gz && \
     cd hdf5* && \
-    mkdir /usr/local/hdf5 && \
-    ./configure --enable-cxx --prefix=/usr/local/hdf5 && \
+    ./configure --enable-cxx --prefix=/usr/local/ && \
     make -j4 && \
     make install
 
@@ -17,7 +16,7 @@ RUN [ ! -f /tmp/sp_hdf5/Makefile.local ] || rm /tmp/sp_hdf5/Makefile.local
 
 COPY sp_hdf5/Makefile.local /tmp/sp_hdf5/
 
-#RUN make test && make install
+RUN make all && make install
 
 WORKDIR /workspace
 
