Make bonsai build on top of sp_hdf5 docker
- Everything working at this stage

--- a/sp_hdf5/Dockerfile
+++ b/sp_hdf5/Dockerfile
@@ -1,4 +1,4 @@
-FROM chime-base
+FROM chime-simd-helpers
 
 WORKDIR /tmp
 RUN mkdir hdf5-src && wget 'https://support.hdfgroup.org/ftp/HDF5/releases/hdf5-1.8/hdf5-1.8.19/src/hdf5-1.8.19.tar.gz' && \
