--- a/bonsai/Dockerfile
+++ b/bonsai/Dockerfile
@@ -1,8 +1,7 @@
 FROM chime-sp-hdf5
 
 # Dependency downloads
-RUN apt-get update && apt-get install -qqy libhdf5-dev && \
-    pip install Cython
+RUN pip install Cython numpy
 
 ADD submodules/bonsai /tmp/bonsai
 
@@ -12,6 +11,6 @@ RUN [ ! -f /tmp/bonsai/Makefile.local ] || rm /tmp/bonsai/Makefile.local
 
 COPY bonsai/Makefile.local /tmp/bonsai/
 
-RUN make all install
+RUN make all install -j4
 
 WORKDIR /workspace
