Make sp_hdf5 provide package config info
- Necessary for bitshuffle

--- a/sp_hdf5/Dockerfile
+++ b/sp_hdf5/Dockerfile
@@ -18,6 +18,8 @@ COPY sp_hdf5/Makefile.local /tmp/sp_hdf5/
 
 RUN make all && make install
 
+ADD sp_hdf5/hdf5.pc /usr/local/lib/pkgconfig/
+
 WORKDIR /workspace
 
 
