Successful installation of bitshuffle
- Now also build bitshuffle before bonsai, to share dependencies

--- a/bitshuffle/Dockerfile
+++ b/bitshuffle/Dockerfile
@@ -1,9 +1,12 @@
-FROM chime-bonsai
+FROM chime-sp-hdf5
+
+# Dependencies
+RUN pip install Cython h5py numpy
 
 ADD submodules/bitshuffle /tmp/bitshuffle
 
 WORKDIR /tmp/bitshuffle
 
-RUN python setup.py install
+RUN python setup.py install --h5plugin --h5plugin-dir=$HOME/lib/hdf5_plugins
 
 WORKDIR /workspace
