--- a/sp_hdf5/Makefile.local
+++ b/sp_hdf5/Makefile.local
@@ -1,2 +1,2 @@
 INCDIR = /usr/local/include
-CPP = $(CXX) -std=c++11 -Wall -O3 -march=native -I. -I/usr/local/include -L/usr/local/lib
+CPP = $(CXX) -std=c++11 -Wall -O3 -march=native -I. -I/usr/local/include -L/usr/local/lib -I/usr/local/include -L/usr/local/lib
