--- a/ch_frb_io/Makefile.local
+++ b/ch_frb_io/Makefile.local
@@ -4,6 +4,6 @@ LIBDIR = /usr/local/lib
 PYDIR = /usr/lib/python
 HAVE_HDF5 = y
 HAVE_PNG = y
-HAVE_SIMPULSE = n
+HAVE_SIMPULSE = y
 CPP = $(CXX) -std=c++11 -Wall -O3 -march=native -ffast-math -funroll-loops -pthread -fPIC -L. -I. -I/usr/include/python2.7 -I/usr/local/lib/python2.7/dist-packages/numpy/core/include/ -I/usr/local/include -L/usr/local/lib
 CPP_LFLAGS=-L. -L$(LIBDIR) -I/usr/local/include -L/usr/local/lib
