--- a/rf_pipelines/Makefile.local
+++ b/rf_pipelines/Makefile.local
@@ -4,5 +4,5 @@ LIBDIR = /usr/local/lib
 PYDIR = /usr/lib/python
 HAVE_HDF5 = y
 HAVE_PNG = y
-HAVE_SIMPULSE = n
+HAVE_SIMPULSE = y
 CPP = $(CXX) -std=c++11 -Wall -O3 -march=native -ffast-math -funroll-loops -pthread -fPIC -L. -I. -I/usr/include/python2.7 -I/usr/local/lib/python2.7/dist-packages/numpy/core/include/ -I/usr/include/jsoncpp -I/usr/local/include -L/usr/local/lib
