Working make of ch_frb_l1
- Fixed by successful linking of bonsai (missed this linker flag). Fixes
  https://github.com/kmsmith137/ch_frb_l1/issues/10

--- a/ch_frb_l1/Dockerfile
+++ b/ch_frb_l1/Dockerfile
@@ -11,6 +11,6 @@ RUN [ ! -f /tmp/ch_frb_l1/Makefile.local ] || rm /tmp/ch_frb_l1/Makefile.local
 
 COPY ch_frb_l1/Makefile.local /tmp/ch_frb_l1/
 
-#RUN make all install
+RUN make all install
 
 WORKDIR /workspace
