Point ch_frb_l1 to personal git repo
- So can I can develop concurrently

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "submodules/ch_frb_l1"]
 	path = submodules/ch_frb_l1
-	url = https://github.com/kmsmith137/ch_frb_l1
+	url = https://github.com/MilesCranmer/ch_frb_l1
+	branch = miles/dev
 [submodule "submodules/ch_frb_L1b"]
 	path = submodules/ch_frb_L1b
 	url = git@github.com:CHIMEFRB/ch_frb_L1b.git
